# xander

./: Cargo.toml  README.md
src/: card_name.rs  checklist.rs  collection.rs  deckbuilder.rs  main.rs
src/staples/: goldfish.rs  mod.rs  mtgtop8.rs
src/ui/: collection_view.rs  mod.rs  panic.rs  show.rs  stats.rs  vim.rs
