[package]
name = "xander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.19", features = ["derive"] }
cursive = { version = "0.20.0", features = ["crossterm"] }
dirs = "5.0.1"
futures-util = "0.3.28"
fuzzy-matcher = "0.3.7"
itertools = "0.11.0"
open = "5.0.0"
reqwest = { version = "0.11.18", features = ["stream"] }
scraper = "0.17.1"
scryfall = "0.14.0"
serde = "1.0.164"
serde_json = "1.0.99"
static_assertions = "1.1.0"
tempfile = "3.6.0"
uuid = "1.3.4"

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "macros", "rt", "rt-multi-thread", "fs", "parking_lot", "io-std"]

