[package]
name = "xander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.12", features = ["derive"] }
cursive = { version = "0.20.0", features = ["crossterm"] }
dirs = "5.0.1"
either = "1.9.0"
futures-util = "0.3.30"
fuzzy-matcher = "0.3.7"
itertools = "0.11.0"
open = "5.0.1"
reqwest = { version = "0.11.23", features = ["stream"] }
scraper = "0.17.1"
scryfall = "0.14.2"
serde = "1.0.193"
serde_json = "1.0.108"
static_assertions = "1.1.0"
tempfile = "3.9.0"
uuid = "1.6.1"

[dependencies.tokio]
version = "1.35.1"
features = ["rt", "macros", "rt", "rt-multi-thread", "fs", "parking_lot", "io-std"]

