[package]
name = "xander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
cursive = { version = "0.20.0", features = ["crossterm"] }
dirs = "5.0.1"
either = "1.10.0"
futures-util = "0.3.30"
fuzzy-matcher = "0.3.7"
itertools = "0.12.1"
open = "5.1.1"
reqwest = { version = "0.11.24", features = ["stream"] }
scraper = "0.18.1"
scryfall = { git = "https://github.com/mendess/scryfall-rs" }
serde = "1.0.197"
serde_json = "1.0.114"
static_assertions = "1.1.0"
tempfile = "3.10.1"
uuid = "1.7.0"

[dependencies.tokio]
version = "1.36.0"
features = ["rt", "macros", "rt", "rt-multi-thread", "fs", "parking_lot", "io-std"]

